adding contact us and about us page

--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,7 @@ body{
 .shadow{
     box-shadow: 25px #e2f3f5;
 }
+.border{
+    border:1px solid var(--bs-warning);
+    border-radius: 0.5rem;
+}
